# FumoPotato-rust

./: .gitignore  Cargo.toml  docker-compose.dev.yml  env_example  schema.sql
.sqlx/: query-0feb336cc10fa2e6c831a9423b583b2515f2cd14239d15b1e006572b3ca5953d.json  query-18fa45f7801e7ae1f56cc7d112458a87debc8b64698beeac2ce003cafd313aca.json  query-30143161f258e808a59ff3c07e3357a4fc4844f4e33c453e2747f45615b3b457.json  query-47e39bbee58a6e017b8cf8efa671c3e06db5b351343bffa1cda559f24984603f.json  query-5581ec03beda39379fa081873933358af328c3efd10b52d0376c1dcff0a41f0c.json  query-6e9c5e7b918453599176bdd231c3ad7dab3bd8f9a7b8352ca0acc57767957afb.json  query-7af789393bf78b70014599ea95b20f44f875938186d90b4ddf04d7d2b106aa51.json  query-858e81186d45224525f6813f603dce30e8a71b9e6e03a2fd5ed88989bf460824.json  query-880740d011bc64bbea9a17c15eef9700dda294a610afe850c1346f391c2cf5da.json  query-8e969aa9648fd9e38644c674e3bbc46b8cbb87c04f2a0bde2d6632e9c7a95ec0.json  query-9dc6fd42cfad020a8a62ea3ac11306fdd1a0f96116726f2fcbd001299c2234cc.json  query-b195b30aa62c36c155331209355bab7bad47d63442a546189f5957b565647c65.json  query-bf34e6279d73b60769d4ab7de9f5916b0da64a42d41ac98edf3d92bc6d4f0fb5.json  query-cc5116efa55f62194edca2f697b0909448e46ab126463fc4b86a672686ab624a.json  query-d25300704a387ffced04d1cefb28306f934628b78b8d13721b17473e836cbda9.json  query-ddf521d2f93dbd453f66a4ec187ff1c93fb4e6191932b3626b5c7af8837aa883.json  query-f05d9e68c57935487dc9a0d4417bcb8a6f28f321fe91b68e8babd0a82e7b7f2c.json  query-f80ebc8f651d1c3bad5414007153cb04d951d971581a494e55e4d4f1c07a9f7f.json
fumo_database/: Cargo.toml
fumo_database/.sqlx/: query-2e43996f230c3f622e2ded0ac3dab59fd3d917ff1ad7fc08f40e9c53be241323.json  query-3ae1496048c14f0918d0e2824a310347f5db1be65c9132c00ec4f0f11d400ce7.json  query-46c9c279883f93eb0a441b656b72c63d2d9c3ac949ad2c6a653ece397c9da15b.json  query-496aece925d431de846f190ce242b0552613ba3cfb116862e25ca734f8cd4c56.json  query-4bc38812cc873731abda7e0463dd84d6055b3d21be3fe2e43cb3df94bdd769ac.json  query-63c5e4ef9f918864ccfeb6038cb6507cd1acd51f38279399a9dfe5db72f58514.json  query-653de05ab5208e17a2cc33ce195f4baa97b489a24bc4fa58c28c117517794800.json  query-6ef2c9530c9fe7bd8c355003c89de928cbe7a9c190a2ceb235b405c841f751a7.json  query-75880543ff5a10c08c31b51ef2f2b4f2efae419f36c67aa4ee7429da303a4af2.json  query-93c09f546e753fd89c617126c2159778cb3385a33543c6da149b495828f60de8.json  query-a0c04d0c4fb6628b824137cc5d73d0aae94c4fefa708827eecdeb91cd944bced.json  query-b94ea69b3266ac693231878193d95eb2477ded181af55314d58d40afa1e60a55.json  query-c7c02574768fd392636c2bc4a5bf281eb00f12e2bfaec31e237eee53d39437dd.json  query-efd27bdfde177a8422f176ccd86b2989a8bae5271499e621ed5ba595a5f16493.json
fumo_database/migrations/: 20230113093058_init.sql  20240302171402_osu-track-table.sql  20240302181609_migrate-to-discord-channels.sql  20240308153127_add-osu-player-table.sql  20241117194620_osu_matches.sql  20241123215040_osu_match_not_found_primary_key.sql  20241129221053_fix_osu_tracking_constrains.sql  20241130171554_add_scores_index.sql  20250218215154_normalize_db.sql  20250223143405_remove_osu_tracked_users.sql  20250520215222_user_nickname_kv.sql  20250520233050_match_scores_beatmap_index.sql
fumo_database/src/: lib.rs  osu.rs  twitch.rs
fumo_database/src/osu/: mod.rs
fumo_macro/: Cargo.toml
fumo_macro/src/: lib.rs
fumo_macro/tests/: mod.rs
fumo_match_scrapper/: Cargo.toml  fumo_match_not_found  lopij_matches
fumo_match_scrapper/src/: db_worker.rs  live_scrapper.rs  main.rs  match_not_found.rs  scrap_worker.rs
fumo_match_scrapper/src/live_scrapper/: matches_worker.rs  mod.rs  queue_worker.rs
fumo_twilight/: Cargo.toml
fumo_twilight/src/: message.rs
migrations/: 20230405120715_remove_twitch_name.sql  20230422160320_add_osu_users.sql  20240302171402_osu-track-table.sql  20240302181609_migrate-to-discord-channels.sql  20240305072552_add-last-checked-time.sql  20241117194620_osu_matches.sql
osu_api/: Cargo.toml
osu_api/src/: datetime.rs  datetime_timestamp.rs  error.rs  lib.rs  metrics.rs
osu_api/src/fallback_models/: mod.rs  osu_fallback_mods.rs
osu_api/src/models/: mod.rs  osu_leaderboard.rs  osu_matches.rs  osu_mods.rs
src/: config.rs  datetime.rs  fumo_context.rs  handlers.rs  main.rs  osu_api.rs  server.rs  sql  stats.rs  twitch_api.rs  utils.rs
src/commands/: attributes.rs  country_leaderboard.rs  mod.rs  multiplayer.rs  osu.rs  osu_tracking.rs  twitch.rs
src/commands/multiplayer/: compare.rs  leaderboard.rs  list.rs  mod.rs
src/components/: listing.rs
src/database/: mod.rs  osu.rs  twitch.rs
src/osu_api/: datetime.rs  error.rs  metrics.rs  mod.rs  models.rs
src/osu_api/models/: mod.rs  osu_leaderboard.rs  osu_mods.rs
src/utils/: interaction.rs  mod.rs  searching.rs  static_components.rs
