[package]
name = "fumo_potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chrono = "0.4.22"
dotenv = "0.15.0"
eyre = "0.6.8"
hyper = "0.14.23"
num-format = "0.4.0"
once_cell = "1.15.0"
prometheus = "0.13.3"
rand = "0.8.5"
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["json", "multipart", "native-tls"] }
routerify = "3.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.11"
twilight-gateway = "0.15.1"
twilight-http = "0.15.1"
twilight-model = "0.15.1"
twilight-standby = "0.15.1"
twilight-util = { version = "0.15.1", features = ["builder"] }

[dev-dependencies]
async-once-cell = "0.5.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
