[package]
name = "fumo_potato"
version = { workspace = true }
edition = "2021"

[workspace.package]
version = "4.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"osu_api",
	"fumo_database",
	"fumo_match_scrapper",
 	"fumo_twilight", 
	"fumo_macro"
]

[workspace.dependencies]
osu_api = { path = "./osu_api" }
fumo_database = { path = "./fumo_database" }
fumo_twilight = { path = "./fumo_twilight" }
fumo_macro = { path = "./fumo_macro" }

[dependencies]
osu_api = { workspace = true }
fumo_database = { workspace = true }
fumo_twilight = { workspace = true }
fumo_macro = { workspace = true }
bytes = "1.5.0"
chrono = "0.4.38"
dotenv = "0.15.0"
eyre = "0.6.8"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
num-format = "0.4.0"
once_cell = "1.15.0"
prometheus = "0.13.3"
rand = "0.8.5"
regex = "1.7.0"
reqwest = { version = "0.11.24", features = ["json", "multipart", "native-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.11"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
twilight-standby = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
time = "0.3.36"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"

[dev-dependencies]
async-once-cell = "0.5.4"
