[package]
name = "fumo_potato_scrapper"
version = { workspace = true }
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
osu_api = { workspace = true }
fumo_database = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
tokio-util = "0.7.12"
eyre = "0.6.12"
