[package]
name = "osu_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "osu_api"
path = "src/lib.rs"


[dependencies]
async-once-cell = "0.5.4"
bitflags = "2.6.0"
chrono = "0.4.38"
dotenv = "0.15.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["sync"] }
